--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>Buy Experience!</title>
+    <link rel="stylesheet" href="resources/css/style.css">
   </head>
 
   <body>
