Add pics and video

--- a/index.html
+++ b/index.html
@@ -2,13 +2,28 @@
 
 <html>
   <head>
-    <title>Buy Experience!</title>
+    <title>Excursion Travel App</title>
     <link rel="stylesheet" href="resources/css/style.css">
   </head>
 
   <body>
-    <h1>Hello World, Buy Experience!</h1>
-    <div>More information to come soon</div>
+    <header>
+      <h1>Discover hidden places around you!</h1>
+      <video src="docs/assets/videos/excursion.mp4" autoplay loop></video>
+    </header>
+    
+    <main>
+      <h2>Your personal travel guide</h2>
+      <p>Excursion remembers places you like, and recommends new points of interests around you</p>
+      <img src="docs/assets/pictures/camp.webp" alt="Camp with fireplace">
+    </main>
+
+    <footer>
+      <img src="docs/assets/pictures/phone.webp" alt="iPhone">
+      <h2>Coming soon for iPhone and Android!</h2>
+    </footer>
+
+
 
   </body>
 
