Add muted for video

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <body>
     <header>
       <h1>Discover hidden places around you!</h1>
-      <video src="docs/assets/videos/excursion.mp4" autoplay loop></video>
+      <video autoplay muted loop>
+        <source src="docs/assets/videos/excursion.mp4" type="video/mp4">
+      </video>
     </header>
     
     <main>
