--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <header>
       <h1>Discover hidden places around you!</h1>
+      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
       <video autoplay muted loop>
         <source src="docs/assets/videos/excursion.mp4" type="video/mp4">
       </video>
@@ -23,6 +24,7 @@
     <footer>
       <img src="docs/assets/pictures/phone.webp" alt="iPhone">
       <h2>Coming soon for iPhone and Android!</h2>
+      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
     </footer>
 
 
