--- a/index.html
+++ b/index.html
@@ -19,12 +19,15 @@
       <h2>Your personal travel guide</h2>
       <p>Excursion remembers places you like, and recommends new points of interests around you</p>
       <img src="docs/assets/pictures/camp.webp" alt="Camp with fireplace">
+
+      <p><img src="docs/assets/pictures/phone.webp" alt="iPhone"></p>
+      <h2>Coming soon for iPhone and Android!</h2>
+      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
     </main>
 
     <footer>
-      <img src="docs/assets/pictures/phone.webp" alt="iPhone">
-      <h2>Coming soon for iPhone and Android!</h2>
-      <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+      <p>&copy; Excursion</p>
+
     </footer>
 
 
